src/snapshots/martian_robots__robots__test__from_str_for_coords-2.snap
---
source: src/robots.rs
assertion_line: 93
expression: moved
---
RobotPosition {
    coordinates: Coordinates {
        x: 1,
        y: 2,
    },
    orientation: West,
}
