src/snapshots/martian_robots__robots__test__from_str_for_coords.snap
---
source: src/robots.rs
assertion_line: 93
expression: moved
---
RobotPosition {
    coordinates: Coordinates {
        x: 2,
        y: 3,
    },
    orientation: North,
}
