src/snapshots/martian_robots__robots__test__from_str_for_coords@east.snap
---
source: src/robots.rs
assertion_line: 168
expression: moved
---
RobotPosition {
    coordinates: Coordinates {
        x: 3,
        y: 2,
    },
    orientation: East,
}
