src/snapshots/martian_robots__robots__test__from_str_for_coords@south.snap
---
source: src/robots.rs
assertion_line: 168
expression: moved
---
RobotPosition {
    coordinates: Coordinates {
        x: 2,
        y: 1,
    },
    orientation: South,
}
