src/snapshots/martian_robots__robots__test__process_all_commands.snap
---
source: src/robots.rs
assertion_line: 184
expression: processed_robot
---
Robot {
    position: RobotPosition {
        coordinates: Coordinates {
            x: 1,
            y: 1,
        },
        orientation: East,
    },
    robot_commands: [],
}
