src/snapshots/martian_robots__robots__test__single_rob_command.snap
---
source: src/robots.rs
assertion_line: 118
expression: processed_robot
---
Robot {
    position: RobotPosition {
        coordinates: Coordinates {
            x: 0,
            y: 1,
        },
        orientation: North,
    },
    robot_commands: [],
}
